--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
             </nav>
             <div id="link">
                 <a>
-                    <img class="link_svg" src="../canyon-svgrepo-com.svg"/>
+                    <img class="link_svg" src="canyon-svgrepo-com.svg"/>
                 </a>
                 <a>
-                    <img class="link_svg" src="../cliff-svgrepo-com.svg">
+                    <img class="link_svg" src="cliff-svgrepo-com.svg">
                 </a>
                 <a>
-                    <img class="link_svg" src="../peaks-svgrepo-com.svg">
+                    <img class="link_svg" src="peaks-svgrepo-com.svg">
                 </a>
             </div>
         </div>
         <h1>50 nature words you learned that your children no longer knows</h1>
         <div id="intro-3">
-            <img id="willow" src="../willow.svg">
+            <img id="willow" src="willow.svg">
             <div id="purpose">
                 <button class="normal pop" data-bs-toggle="modal" data-bs-target="#objective">Campaign Objectives</button>
                 <button class="rounded pop" data-bs-toggle="modal" data-bs-target="#berea">How does this affect Berea?</button>
@@ -46,17 +46,17 @@
         </section>
     </div>
     <div id="bento">
-        <div id="blue_bell" class="pop" data-bs-toggle="modal" data-bs-target="#blue_bellpop"><img src="../freesia-flower-svgrepo-com.svg"></div>
-        <div id="badger" class="pop" data-bs-toggle="modal" data-bs-target="#badgerpop"><img src="../badger-svgrepo-com.svg"></div>
-        <div id="acorn" class="pop" data-bs-toggle="modal" data-bs-target="#acornpop"><img src="../acorn-svgrepo-com.svg"></div>
-        <div id="mole" class="pop" data-bs-toggle="modal" data-bs-target="#molepop"><img src="../mole-svgrepo-com.svg"></div>
-        <div id="mushroom" class="pop" data-bs-toggle="modal" data-bs-target="#mushroompop"><img src="../mushroom-svgrepo-com.svg"></div>
-        <div id="beetle" class="pop" data-bs-toggle="modal" data-bs-target="#beetlepop"><img src="../beetle-svgrepo-com.svg"></div>
-        <div id="owl" class="pop" data-bs-toggle="modal" data-bs-target="#owlpop"><img src="../owl-svgrepo-com.svg"></div>
-        <div id="yellow_flower" class="pop" data-bs-toggle="modal" data-bs-target="#buttercuppop"><img src="../flowers-flower-svgrepo-com.svg"></div>
-        <div id="clover" class="pop" data-bs-toggle="modal" data-bs-target="#cloverpop"><img src="../clover-svgrepo-com.svg"></div>
-        <div id="raven" class="pop" data-bs-toggle="modal" data-bs-target="#ravenpop"><img src="../crow-svgrepo-com.svg"></div>
-        <div id="tulip" class="pop" data-bs-toggle="modal" data-bs-target="#tulippop"><img src="../tulip-svgrepo-com.svg"></div>
+        <div id="blue_bell" class="pop" data-bs-toggle="modal" data-bs-target="#blue_bellpop"><img src="freesia-flower-svgrepo-com.svg"></div>
+        <div id="badger" class="pop" data-bs-toggle="modal" data-bs-target="#badgerpop"><img src="badger-svgrepo-com.svg"></div>
+        <div id="acorn" class="pop" data-bs-toggle="modal" data-bs-target="#acornpop"><img src="acorn-svgrepo-com.svg"></div>
+        <div id="mole" class="pop" data-bs-toggle="modal" data-bs-target="#molepop"><img src="mole-svgrepo-com.svg"></div>
+        <div id="mushroom" class="pop" data-bs-toggle="modal" data-bs-target="#mushroompop"><img src="mushroom-svgrepo-com.svg"></div>
+        <div id="beetle" class="pop" data-bs-toggle="modal" data-bs-target="#beetlepop"><img src="beetle-svgrepo-com.svg"></div>
+        <div id="owl" class="pop" data-bs-toggle="modal" data-bs-target="#owlpop"><img src="owl-svgrepo-com.svg"></div>
+        <div id="yellow_flower" class="pop" data-bs-toggle="modal" data-bs-target="#buttercuppop"><img src="flowers-flower-svgrepo-com.svg"></div>
+        <div id="clover" class="pop" data-bs-toggle="modal" data-bs-target="#cloverpop"><img src="clover-svgrepo-com.svg"></div>
+        <div id="raven" class="pop" data-bs-toggle="modal" data-bs-target="#ravenpop"><img src="crow-svgrepo-com.svg"></div>
+        <div id="tulip" class="pop" data-bs-toggle="modal" data-bs-target="#tulippop"><img src="tulip-svgrepo-com.svg"></div>
     </div>
     <div id="snap"></div>      
       <!-- Modal -->
